# 4156-Miniproject-2024-Students-Cplusplus

./: .gitignore  README.md  citations.txt  fix_bug.md  honesty.txt
IndividualMiniprojectC++/: CMakeLists.txt
IndividualMiniprojectC++/include/: Course.h  Department.h  Globals.h  MyApp.h  MyFileDatabase.h  RouteController.h  dconfig
IndividualMiniprojectC++/src/: Course.cpp  Department.cpp  Globals.cpp  MyApp.cpp  MyFileDatabase.cpp  RouteController.cpp  main.cpp
IndividualMiniprojectC++/test/: CourseUnitTests.cpp  DepartmentUnitTests.cpp  MyAppUnitTests.cpp  MyFileDataBaseUnitTests.cpp  RouteControllerUnitTests.cpp  sample.cpp
